css/styles.css
/* ... */
@media (min-width: 992px) {
  header.masthead {
    padding-top: calc(10rem + 55px);
    padding-bottom: 10rem;
  }
  header.masthead .masthead-content .masthead-heading {
    font-size: 6rem;
  }
  header.masthead .masthead-content .masthead-subheading {
    font-size: 4rem;
  }
}


html,body{width: 100vw; }

.section{
  height: 100vh;
  height: 100dvh;
  position: relative;
}

@media (max-width: 600px)
{
    .container
    {
      padding-right: calc(var(--bs-gutter-x) * 0.2) !important;
      padding-left: calc(var(--bs-gutter-x) * 0.2) !important;
    }

    .image {
      display: none;
      max-width: 500px;
    }


}

@media (min-width: 600px) {
  .content {
    display: flex;
    align-items: center;
  
  }
}

.header {
    /* position: relative; */
    height: 100vh;
    height: 100dvh;
    /* overflow: hidden; */
    padding-top: calc(7rem + 72px);
    padding-bottom: 7rem;
    /* background: linear-gradient(0deg, #ff6a00 0%, #ee0979 100%); */
    background-image: url("../assets/img/IMG_2370.png");
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: scroll;
    background-size: cover;
}

.scroll_wrapper {
  height: 100vh;
  height: 100dvh;
  overflow-y: scroll;
  scroll-snap-type: y mandatory;
}

.scroll_point  {
  scroll-snap-align: start;
}



.list li{
  margin: 10px 0;
}

.second_item {
  padding-top: 0.5rem !important;
}


.arrow {
  white-space: nowrap;
  font-size: 3rem;
  position: absolute;
  right: 0;
  left: 0;
  margin: auto;
  width: 25px;
  height: 25px;

}

.down_arrow {
  bottom: 0px;
  animation: BottomMoveUpDown 1s linear infinite;
}

.up_arrow{
  top: 0px;
  animation: TopMoveUpDown 1s linear infinite;
}

.black_arrow {
  color: black;
}

@keyframes BottomMoveUpDown {
  0%, 100% {
    bottom: 0;
  }
  50% {
    bottom: 10px;
  }
}
@keyframes TopMoveUpDown {
  0%, 100% {
    top: 0;
  }
  50% {
    top: 10px;
  }
}





/* .content .container {
  display:table-cell;
  vertical-align:middle;
} */

/* @media (min-width: 576px) {
  .container-sm, .container {
    max-width: 540px;
  }
}
@media (min-width: 768px) {
  .container-md, .container-sm, .container {
    max-width: 720px;
  }
}
@media (min-width: 992px) {
  .container-lg, .container-md, .container-sm, .container {
    max-width: 960px;
  }
}
@media (min-width: 1200px) {
  .container-xl, .container-lg, .container-md, .container-sm, .container {
    max-width: 1140px;
  }
}
@media (min-width: 1400px) {
  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
    max-width: 1320px;
  }
} */

